--- a/index.html
+++ b/index.html
@@ -505,9 +505,9 @@ table tbody+tbody {
 }
 
  :root {--mermaid-font-zoom:1.23958em ;} 
-</style><title>Xuan Liu</title>
+</style><title>LIU, Xuan</title>
 </head>
 <body class='typora-export os-windows'><div class='typora-export-content'>
-<div id='write'  class=''><h1 id='xuan-liu'><span>Xuan Liu</span></h1><p><span>	</span><strong><span>Blog</span></strong><span>      : </span><a href='https://www.cnblogs.com/golem' target='_blank' class='url'>https://www.cnblogs.com/golem</a></p><p><span>	</span><strong><span>Email</span></strong><span>    : </span><a href='mailto:microminiature@163.com' target='_blank' class='url'>microminiature@163.com</a></p><p><span>	</span><strong><span>GitHub</span></strong><span> : </span><a href='https://github.com/Microminiature' target='_blank' class='url'>https://github.com/Microminiature</a></p><p><span>	</span><strong><span>Zhihu</span></strong><span>    : </span><a href='https://www.zhihu.com/people/he-he-83-99' target='_blank' class='url'>https://www.zhihu.com/people/he-he-83-99</a></p><p>&nbsp;</p></div></div>
+<div id='write'  class=''><h1 id='xuan-liu'><span>LIU, Xuan</span></h1><p><span>	</span><strong><span>Blog</span></strong><span>      : </span><a href='https://www.cnblogs.com/golem' target='_blank' class='url'>https://www.cnblogs.com/golem</a></p><p><span>	</span><strong><span>Email</span></strong><span>    : </span><a href='mailto:microminiature@163.com' target='_blank' class='url'>microminiature@163.com</a></p><p><span>	</span><strong><span>GitHub</span></strong><span> : </span><a href='https://github.com/Microminiature' target='_blank' class='url'>https://github.com/Microminiature</a></p><p><span>	</span><strong><span>Zhihu</span></strong><span>    : </span><a href='https://www.zhihu.com/people/he-he-83-99' target='_blank' class='url'>https://www.zhihu.com/people/he-he-83-99</a></p><p>&nbsp;</p></div></div>
 </body>
 </html>
